// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render an info bar for a venue correctly 1`] = `
<ul
  className="components-entity-info-bar-m__container"
>
  <li
    className="components-entity-info-bar-m__item"
  >
    <FaTags
      className="components-entity-info-bar-m__icon"
    />
    <span>
      Tags Label
    </span>
  </li>
  <li
    className="components-entity-info-bar-m__item"
  >
    <FaGlobe
      className="components-entity-info-bar-m__icon"
    />
    <a
      className="components-entity-info-bar-m__link"
      rel="noopener"
      target="_blank"
    >
      Website
    </a>
  </li>
  <li
    className="components-entity-info-bar-m__item"
  >
    <FaPencil
      className="components-entity-info-bar-m__icon"
    />
    <Link
      className="components-entity-info-bar-m__link"
      replace={false}
      to="/venue/edit/some-venue-id"
    >
      Edit
    </Link>
  </li>
</ul>
`;

exports[`should render an info bar for an event correctly 1`] = `
<ul
  className="components-entity-info-bar-m__container"
>
  <li
    className="components-entity-info-bar-m__item"
  >
    <FaTags
      className="components-entity-info-bar-m__icon"
    />
    <span>
      Tags Label
    </span>
  </li>
  <li
    className="components-entity-info-bar-m__item"
  >
    <FaGlobe
      className="components-entity-info-bar-m__icon"
    />
    <a
      className="components-entity-info-bar-m__link"
      rel="noopener"
      target="_blank"
    >
      Website
    </a>
  </li>
  <li
    className="components-entity-info-bar-m__item"
  >
    <FaPencil
      className="components-entity-info-bar-m__icon"
    />
    <Link
      className="components-entity-info-bar-m__link"
      replace={false}
      to="/event/edit/some-event-id"
    >
      Edit
    </Link>
  </li>
  <li
    className="components-entity-info-bar-m__item"
  >
    <FaCopy
      className="components-entity-info-bar-m__icon"
    />
    <Link
      className="components-entity-info-bar-m__link"
      onClick={[Function]}
      replace={false}
      to="/event"
    >
      Copy
    </Link>
  </li>
</ul>
`;
